fixed search in file panel in dark mode, some old variables was saved, will be deleted in future

--- a/obsidian.css
+++ b/obsidian.css
@@ -13,11 +13,13 @@ body {
 
 .theme-dark {
   --background-primary: #343434;
-  --background-primary-alt: #171717;
+  /* --background-primary-alt: #171717; */
+  --background-primary-alt: #2c2c2c;
   --background-secondary: #2c2c2c;
   --background-secondary-alt: #2c2c2c;
   --background-modifier-border: #303030;
   --background-modifier-box-shadow: rgba(0, 0, 0, 0.85);
+  --background-modifier-form-field: var(--background-primary);
   --text-accent: #df4a16;
   --text-accent-hover: #df7a16;
   --text-normal: #dcddde;
@@ -29,7 +31,8 @@ body {
   --text-on-accent: #dcddde;
   --text-selection: rgba(223, 74, 22, 0.8);
   --text-highlight-bg: #df4a16;
-  --interactive-normal: #2a2a2a;
+  /* --interactive-normal: #2a2a2a; */
+  --interactive-normal: var(--background-primary);
   --interactive-hover: #303030;
   --interactive-accent: #df4a16;
   --interactive-accent-rgb: #df7a16;
